--- a/guide/argument_unpacking.ipynb
+++ b/guide/argument_unpacking.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# args 位置参数\n",
-    "# kwargs 关键字参数\n",
+    "## args 位置参数\n",
+    "## kwargs 关键字参数\n",
     "\n",
-    "# *args 序列解包操作\n",
-    "# **kwargs 映射解包操作"
+    "## *args 序列解包操作\n",
+    "## **kwargs 映射解包操作"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 函数内传参"
+    "## 函数内传参"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# locals()"
+    "## locals()"
    ]
   },
   {
