用辅助函数来取代复杂的表达式

--- a/guide/util_function.ipynb
+++ b/guide/util_function.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 用辅助函数来取代复杂的表达式"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -111,10 +118,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "green = my_values.get('green')\n",
+    "if green[0]:\n",
+    "    green = int(green[0])\n",
+    "else:\n",
+    "    green = 0\n",
+    "print(green)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_first_int(values, key, default=0):\n",
+    "    value = values.get(key)\n",
+    "    if value[0]:\n",
+    "        value = int(value[0])\n",
+    "    else:\n",
+    "        value = default\n",
+    "    return value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 0 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "red = get_first_int(my_values, 'red')\n",
+    "blue = get_first_int(my_values, 'blue')\n",
+    "green = get_first_int(my_values, 'green')\n",
+    "print(red, blue, green)"
+   ]
   }
  ],
  "metadata": {
