--- a/jupyter_notebook/jupyter_notebook_magic_keywords.ipynb
+++ b/jupyter_notebook/jupyter_notebook_magic_keywords.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 单元格内执行语句使用的时间"
+    "## 单元格内执行语句使用的时间\n",
+    "* [Built-in magic commands](https://ipython.readthedocs.io/en/stable/interactive/magics.html)"
    ]
   },
   {
