--- a/jupyter_notebook/jupyter_notebook_magic_keywords.ipynb
+++ b/jupyter_notebook/jupyter_notebook_magic_keywords.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "## 单元格内执行语句使用的时间\n",
-    "* [Built-in magic commands](https://ipython.readthedocs.io/en/stable/interactive/magics.html)"
+    "* [Built-in magic commands](https://ipython.readthedocs.io/en/stable/interactive/magics.html)\n",
+    "* [左手程序员，右手作家：你必须会的Jupyter Notebook](https://www.jianshu.com/p/86117613b7a6)\n",
+    "* [Jupyter Notebook的27个秘诀，技巧和快捷键](https://www.zybuluo.com/hanxiaoyang/note/534296)"
    ]
   },
   {
