获得文件或目录名增加一种方法

--- a/path/get_file_or_dir_name.ipynb
+++ b/path/get_file_or_dir_name.ipynb
@@ -23,59 +23,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 方法1 通过字符串分隔"
+    "## 方法1 通过 os.path.basename 获得路径最后一个名字"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['', 'Users', 'wjj', 'test.txt']\n",
-      "test.txt\n"
-     ]
-    }
-   ],
-   "source": [
-    "names = file.split('/')\n",
-    "print(names)\n",
-    "print(names[-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['', 'Users', 'wjj']\n",
-      "wjj\n"
-     ]
-    }
-   ],
-   "source": [
-    "names = dir.split('/')\n",
-    "print(names)\n",
-    "print(names[-1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 方法2 通过basename"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +49,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **推荐使用方法2**"
+    "## 方法2 通过 os.path.split 分隔目录和文件"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/wjj test.txt\n",
+      "/Users wjj\n"
+     ]
+    }
+   ],
+   "source": [
+    "d, f = os.path.split(file)\n",
+    "print(d, f)\n",
+    "d, f = os.path.split(dir)\n",
+    "print(d, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 方法3 通过字符串分隔"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', 'Users', 'wjj', 'test.txt']\n",
+      "test.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = file.split('/')\n",
+    "print(names)\n",
+    "print(names[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', 'Users', 'wjj']\n",
+      "wjj\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = dir.split('/')\n",
+    "print(names)\n",
+    "print(names[-1])"
    ]
   }
  ],
